--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="service">
                 <i class="fas fa-code"></i>
-                <h3>Objetivo</h3>
+                <h3>Servicio</h3>
                 <p>Integrate your systems and develop workflows with Spruce's open API</p>
             </div>
         </div>
@@ -293,8 +293,8 @@
                     <div class="info-card">
                         <h3>Información de Contacto</h3>
                         <ul>
-                            <li><i class="fas fa-map-marker-alt"></i> Dirección: Calle Falsa 123, Ciudad, País</li>
-                            <li><i class="fas fa-phone"></i> Teléfono: +123 456 7890</li>
+                            <li><i class="fas fa-map-marker-alt"></i>Calle Falsa 123, La Plata, Argentina</li>
+                            <li><i class="fas fa-phone"></i> +54 221 638 3540</li>
                             <li><i class="fas fa-envelope"></i> Correo: info@comitejuvenil.com</li>
                         </ul>
                     </div>
@@ -313,10 +313,10 @@
             <div class="footer-grid">
                 <!-- Columna 1: Información de contacto -->
                 <div class="footer-col">
-                    <h3>Contacto</h3>
+                    <h3>Contactoc</h3>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> Calle Falsa 123, Ciudad, País</li>
-                        <li><i class="fas fa-phone"></i> +123 456 7890</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Calle Falsa 123, La Plata, Argentina</li>
+                        <li><i class="fas fa-phone"></i> +54 221 638 3540</li>
                         <li><i class="fas fa-envelope"></i> info@comitejuvenil.com</li>
                     </ul>
                 </div>
@@ -346,7 +346,7 @@
     
             <!-- Derechos de autor -->
             <div class="derechos">
-                <p>&copy; 2023 Comité Juvenil Nacional. Todos los derechos reservados.</p>
+                <p>&copy; 2025 Comité Juvenil Nacional. Todos los derechos reservados.</p>
             </div>
         </div>
     
