--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <ul>
                         <li><i class="fas fa-check"></i> Formación espiritual</li>
                         <li><i class="fas fa-check"></i> Eventos dinámicos</li>
-                        <li><i class="fas fa-check"></i> Compromiso con los valores cristianos</li>
+                        <li><i class="fas fa-check"></i> Compromiso </li>
                     </ul>
                 </div>
             </div>
@@ -313,7 +313,7 @@
             <div class="footer-grid">
                 <!-- Columna 1: Información de contacto -->
                 <div class="footer-col">
-                    <h3>Contactoc</h3>
+                    <h3>Contacto</h3>
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Calle Falsa 123, La Plata, Argentina</li>
                         <li><i class="fas fa-phone"></i> +54 221 638 3540</li>
