--- a/carrucel.html
+++ b/carrucel.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<!-- Coding By CodingNepal - www.codingnepalweb.com -->
-<html lang="en">
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Card Slider HTML and CSS | CodingNepal</title>
-  <!-- Linking SwiperJS CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-  <link rel="stylesheet" href="caruusel.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+
+    <link rel="stylesheet" href="caruusel.css">
+
+    <!--LIBRERIA DE LIDERES CARRUSEL--> 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+
 </head>
 <body>
-    <section id="liderazgo" class="liderazgo">
+
+     <!-- Sección Liderazgo -->
+
+    <section id="liderazgo" class="liderazgo" data-aos="fade-up">
         <div class="container swiper">
             <h2>Nuestro Liderazgo</h2>
             <p class="descripcion">Conoce a los líderes que guían y motivan a nuestra comunidad juvenil.</p>
@@ -108,10 +116,15 @@
         </div>
 
     </section>
-  
-  <!-- Linking SwiperJS script -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <!-- Linking custom script -->
-  <script src="caruusel.js"></script>
+
+    
+    <!-- Linking SwiperJS script -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+
+    <script src="caruusel.js"></script>
+
+
+    
 </body>
 </html>
